--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -29,7 +29,8 @@
     <string name="nav_header_desc">Navigation header</string>
     <string name="action_settings">Settings</string>
 
-    <string name="menu_home">Home</string>
-    <string name="menu_gallery">Gallery</string>
+    <string name="menu_reservations">Reservations</string>
+    <string name="menu_profiles">Profiles</string>
     <string name="menu_slideshow">Slideshow</string>
+    <string name="title_activity_drawer">DrawerActivity</string>
 </resources>
