--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,4 +44,10 @@
     <string name="home_recycler_row_reservation_lane" />
     <string name="home_recycler_row_reservation_address" />
     <string name="home_recycler_row_reservation_status" />
+    <string name="home_recycler_row_button_end">End</string>
+
+    <string name="extend_reservation_msg">Extend reservation by 15 minutes?</string>
+    <string name="btn_yes">Yes</string>
+    <string name="btn_no">No</string>
+    <string name="cannot_extend_reservation">Cannot extend reservation</string>
 </resources>
